--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -4,3 +4,5 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
