added dark switch

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - AdminLTE3</title>
     <partial name="_Styles" />
 </head>
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition sidebar-mini" id="bodyContainer">
     <div class="wrapper">
 
         <partial name="_TopNavigation" />
