--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,3 +7,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <a class="btn btn-secondary" asp-action="Privacy" asp-controller="Home">Privacy</a>
+<div class="custom-control custom-switch">
+  <input type="checkbox" class="custom-control-input" onclick="darkmodeChange()" id="darkSwitch" />
+  <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+</div>
