--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,6 +39,10 @@
             <div class="p-3">
                 <h5>Title</h5>
                 <p>Sidebar content</p>
+                <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" onclick="darkmodeChange()" id="darkSwitch" />
+                    <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+                </div>
             </div>
         </aside>
         <partial name="_Footer" />
